Fix for Java 9 incompatibility issue
Workaround for figwheel Java 9 incompatibility issue described here: bhauman/lein-figwheel#612